update: security configuration